# r2ai

./: .gitignore  AUTHENTICATION_BLOCKER_FIX_REPORT.md  AUTHENTICATION_IMPLEMENTATION_REPORT.md  AUTH_TOKEN_REMOVAL_FIX_REPORT.md  CAMERA_FIX_EXECUTIVE_SUMMARY.md  CAMERA_INITIALIZATION_FIX_REPORT.md  COMPREHENSIVE_QA_ASSESSMENT_REPORT.md  Camtest.py  DASHBOARD_EMERGENCY_REPAIR_SUCCESS_REPORT.md  DASHBOARD_INTEGRATION_PLAN.md  DASHBOARD_ISSUE_RESOLUTION_SUCCESS.md  DASHBOARD_MANAGEMENT.md  DASHBOARD_PERFORMANCE_OPTIMIZATION_SUMMARY.md  DASHBOARD_QUICK_START.md  DASHBOARD_SECURITY_IMPLEMENTATION_REPORT.md  DASHBOARD_SECURITY_QUICK_REFERENCE.md  DASHBOARD_VIDEO_DEBUG_RESOLUTION_REPORT.md  DASHBOARD_VIDEO_RECOVERY_REPORT.md  DASHBOARD_VISION_UPGRADE_REPORT.md  DASHBOARD_VULNERABILITY_ANALYSIS.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SUMMARY.md  DISNEY_DASHBOARD_DETECTION_QA_ASSESSMENT.md  ELITE_QA_COMPREHENSIVE_ASSESSMENT_REPORT.md  ELITE_QA_COMPREHENSIVE_PROTECTION_FRAMEWORK_REPORT.md  ELITE_QA_COMPREHENSIVE_TOOL_ASSESSMENT_REPORT.md  ELITE_QA_DESKTOP_APPLICATIONS_VERIFICATION_REPORT.md  ELITE_QA_TEST_CLEANUP_REPORT.md  EMERGENCY_STOP_VALIDATION_REPORT.md  ENHANCED_DASHBOARD_VIDEO_FIX_SUMMARY.md  ENHANCED_SERVO_SYSTEM_DOCUMENTATION.md  FRONTEND_DEVELOPMENT_STACK_VERIFICATION_REPORT.md  GITHUB_SETUP_INSTRUCTIONS.md  GPU_METRICS_INTEGRATION_REPORT.md  GUEST_RECOGNITION_SYSTEM.md  INCIDENT_RESOLUTION_REPORT.md  LICENSE  MAESTRO_SERVO_INTEGRATION_GUIDE.md  MISSION_ACCOMPLISHED_REPORT.md  PERFORMANCE_OPTIMIZATION_ARCHITECTURE.md  (+307 more)
config/: default_servo_config.json  servo_config.json  (+1 more)
(+118 files in other folders)
