[project]
name = "r2ai"
version = "0.1.0"
description = "R2D2 AI Vision and Control System"
authors = [
    {name = "R2AI Team"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "opencv-python (>=4.0,<5.0)",
    "numpy (>=1.21,<2.0)",
    "websockets (>=11.0,<16.0)",
    "flask (>=2.0,<4.0)",
    "ultralytics (>=8.0,<9.0)",
    "pyyaml (>=5.0,<7.0)",
    "aiofiles (>=22.0,<25.0)",
    "psutil (>=5.0,<8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "safety (>=3.6.2,<4.0.0)"
]
